# sjm-sports

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/: copilot-instructions.md
alembic/: env.py
alembic/versions/: 202605150001_initial_schema.py  202605170001_add_college_source_metadata.py
app/: __init__.py  main.py
app/api/routes/: health.py
app/core/: config.py  database.py
app/importers/: __init__.py  base.py  roster_spreadsheet.py  school_source_builder.py  school_sources.py  sidearm_roster.py  verify_school_vendors.py
app/models/: __init__.py  people.py  positions.py  rosters.py  schools.py  scraping.py
app/repositories/: __init__.py  base.py  people.py  positions.py  rosters.py  schools.py  scraping.py
app/schemas/: __init__.py  dashboard.py  people.py  players.py  roster_import.py  school_sources.py  scraping.py
app/scrapers/: __init__.py  base.py
app/services/: __init__.py  dashboard.py  exports.py  health.py  home.py  imports.py  players.py  school_sources.py  search.py
app/utils/: roster_normalization.py  school_sources.py
app/web/: __init__.py
app/web/routes/: __init__.py  home.py  players.py
app/web/static/: styles.css
app/web/templates/: base.html  home.html  players.html
data/: schools.csv  schools.verified.csv
scripts/: build_school_sources.py
src/sjm_sports/: __init__.py
tests/: conftest.py
tests/fixtures/: roster_import_sample.csv
tests/fixtures/sidearm/: boston_college_2026_baseball_roster.html  georgetown_2026_baseball_roster.html  louisville_2026_baseball_roster.html
tests/integration/: test_app_smoke.py
tests/unit/: test_dashboard_service.py  test_metadata.py  test_player_search_service.py  test_roster_import_parser.py  test_roster_import_service.py  test_roster_normalization.py  test_school_source_builder.py  test_school_source_import_service.py  test_school_source_vendor_verification.py  test_services.py  test_sidearm_roster.py
