[project]
name = "sjm-sports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan Choate", email = "bryan.choate@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.1.0",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[project.scripts]
sjm-sports = "sjm_sports:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.13",
]
