[project]
name = "sjm-sports"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Bryan Choate", email = "bryan.choate@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "lxml>=6.1.0",
    "openpyxl>=3.1.5",
    "psycopg[binary]>=3.2.13",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.28",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[project.scripts]
sjm-sports = "app.main:run"

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests"]
markers = [
    "requires_db: marks tests that require a configured PostgreSQL database",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.13"
mypy_path = "."
packages = ["app"]
check_untyped_defs = true
disallow_untyped_defs = true
warn_return_any = true
warn_unused_configs = true
